# dl4ds-spring-2025-midterm-challenge-lavaman131

./: .gitignore  README.md  pyproject.toml  starter_code.py
config/: inference.yml  train.yml  wandb.yml
config/models/: convnet.yml  resnet.yml  resnet101.yml  resnet18.yml  resnet50.yml  resnext101_32x4d.yml  resnext50_32x4d.yml
config/train/: part1.yml
notebooks/: visualize_data.ipynb
scripts/: evaluate.py  save_data.py  train.py
src/cv/: __init__.py
src/cv/data/: cifar100.py  dataset.py  transforms.py
src/cv/evaluate/: cifar100.py  ood.py
src/cv/models/: __init__.py  cnn.py
src/cv/models/layers/: __init__.py  conv_block.py  resnet.py
src/cv/train/: __init__.py
src/cv/utils/: build.py  config.py  misc.py  save.py
