[project]
name = "cv"
version = "0.0.1"
description = ""
authors = [{ name = "Alex Lavaee", email = "alavaee@bu.edu" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "timm",
    "scipy",
    "pillow",
    "huggingface-hub",
    "wandb",
    "webdataset",
    "hf_transfer",
    "numpy",
    "pandas",
    "matplotlib",
    "omegaconf",
    "tqdm",
    "ipykernel",
    "ipywidgets",
    "albumentations",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cv"]
namespaces = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
